force-app/main/default/objects/OppCustomProject__c/OppCustomProject__c.object-meta.xml
<CustomObject>
    <description>Object to store opportunity&apos;s additional information on US custom project (Krion and similar products transformed by a fabricator).</description>
    <label>Opportunity Custom Project</label>
    <nameField>
        <label>Custom Project Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Custom Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>