force-app/main/default/objects/OppCustomProject__c/fields/BuildingType__c.field-meta.xml
<CustomField>
    <fullName>BuildingType__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Residence</fullName>
            </value>
            <value>
                <fullName>Residential Building</fullName>
            </value>
            <value>
                <fullName>Commercial Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>