force-app/main/default/objects/OppCustomProject__c/fields/CookingAppliances__c.field-meta.xml
<CustomField>
    <fullName>CookingAppliances__c</fullName>
    <label>Cooking Appliances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Range Top</fullName>
            </value>
            <value>
                <fullName>Cooktop</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>