force-app/main/default/objects/OppCustomProject__c/fields/CustomCabinetry__c.field-meta.xml
<CustomField>
    <fullName>CustomCabinetry__c</fullName>
    <label>Porcelanosa Custom Cabinetry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValueSet</valueSetName>
    </valueSet>
</CustomField>