force-app/main/default/objects/OppCustomProject__c/fields/CustomSinkSize__c.field-meta.xml
<CustomField>
    <fullName>CustomSinkSize__c</fullName>
    <label>Custom Sink Size (LxWxD)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>