force-app/main/default/objects/OppCustomProject__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>Delivery Needed By</label>
    <required>true</required>
    <type>Date</type>
</CustomField>