force-app/main/default/objects/OppCustomProject__c/fields/DeliveryInstructions__c.field-meta.xml
<CustomField>
    <fullName>DeliveryInstructions__c</fullName>
    <label>Delivery Instructions</label>
    <length>60</length>
    <type>Text</type>
</CustomField>