force-app/main/default/objects/OppCustomProject__c/fields/Elevator__c.field-meta.xml
<CustomField>
    <fullName>Elevator__c</fullName>
    <label>Elevator?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValueSet</valueSetName>
    </valueSet>
</CustomField>