force-app/main/default/objects/OppCustomProject__c/fields/Fabricator__c.field-meta.xml
<CustomField>
    <fullName>Fabricator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabricator Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Custom Projects</relationshipLabel>
    <relationshipName>OpportunityCustomProjects</relationshipName>
    <type>Lookup</type>
</CustomField>