force-app/main/default/objects/OppCustomProject__c/fields/FabricatorSAPOrder2__c.field-meta.xml
<CustomField>
    <fullName>FabricatorSAPOrder2__c</fullName>
    <label>Fabricator SAP Order No. 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>