force-app/main/default/objects/OppCustomProject__c/fields/FabricatorSAPOrder__c.field-meta.xml
<CustomField>
    <fullName>FabricatorSAPOrder__c</fullName>
    <label>Fabricator SAP Order No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>