force-app/main/default/objects/OppCustomProject__c/fields/FaucetSpread__c.field-meta.xml
<CustomField>
    <fullName>FaucetSpread__c</fullName>
    <label>Faucet Spread</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 in</fullName>
            </value>
            <value>
                <fullName>6 in</fullName>
            </value>
            <value>
                <fullName>8 in</fullName>
            </value>
            <value>
                <fullName>10 in</fullName>
            </value>
            <value>
                <fullName>Other (explain in notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>