force-app/main/default/objects/OppCustomProject__c/fields/FQuoteAttachment__c.field-meta.xml
<CustomField>
    <fullName>FQuoteAttachment__c</fullName>
    <label>Fabricator Quote Attachment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>