force-app/main/default/objects/OppCustomProject__c/fields/IsMaterialInStock__c.field-meta.xml
<CustomField>
    <fullName>IsMaterialInStock__c</fullName>
    <label>Is Material in Stock?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValueSet</valueSetName>
    </valueSet>
</CustomField>