force-app/main/default/objects/OppCustomProject__c/fields/LegsNumber__c.field-meta.xml
<CustomField>
    <fullName>LegsNumber__c</fullName>
    <label>How Many Legs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>