force-app/main/default/objects/OppCustomProject__c/fields/MaterialReleased__c.field-meta.xml
<CustomField>
    <fullName>MaterialReleased__c</fullName>
    <label>Material Released</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValueSet</valueSetName>
    </valueSet>
</CustomField>