force-app/main/default/objects/OppCustomProject__c/fields/MatReleaseDetails__c.field-meta.xml
<CustomField>
    <fullName>MatReleaseDetails__c</fullName>
    <label>Material Release Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>