force-app/main/default/objects/OppCustomProject__c/fields/OtherCutouts__c.field-meta.xml
<CustomField>
    <fullName>OtherCutouts__c</fullName>
    <label>Other Cutouts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Grommets</fullName>
            </value>
            <value>
                <fullName>Architectural Grilles</fullName>
            </value>
            <value>
                <fullName>Electrical Outlets</fullName>
            </value>
            <value>
                <fullName>Special Design (Explain in Notes)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Architectural Gilles</fullName>
                <isActive>false</isActive>
                <label>Architectural Gilles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>