force-app/main/default/objects/OppCustomProject__c/fields/OverflowLocation__c.field-meta.xml
<CustomField>
    <fullName>OverflowLocation__c</fullName>
    <label>Sink Overflow Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>UNDER FAUCET</fullName>
            </value>
            <value>
                <fullName>IN FRONT OF FAUCET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>