force-app/main/default/objects/OppCustomProject__c/fields/ProductManager__c.field-meta.xml
<CustomField>
    <fullName>ProductManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>