force-app/main/default/objects/OppCustomProject__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <description>Type of custom project</description>
    <label>Project Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTISSIMA</fullName>
            </value>
            <value>
                <fullName>KRION</fullName>
            </value>
            <value>
                <fullName>KRION &amp; XTONE</fullName>
            </value>
            <value>
                <fullName>XTONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>