force-app/main/default/objects/OppCustomProject__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Custom_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>