force-app/main/default/objects/OppCustomProject__c/fields/SAPCode__c.field-meta.xml
<CustomField>
    <fullName>SAPCode__c</fullName>
    <label>SAPCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100089141 - KITCHEN COUNTERTOP KRION</fullName>
            </value>
            <value>
                <fullName>100288217 - VANITY COUNTERTOP KRION</fullName>
            </value>
            <value>
                <fullName>100089146 - PROYECTO OTHERS KRION</fullName>
            </value>
            <value>
                <fullName>100224050 - KITCHEN COUNTERTOP XTONE</fullName>
            </value>
            <value>
                <fullName>100236636 -VANITY COUNTERTOP XTONE</fullName>
            </value>
            <value>
                <fullName>100223200 - PROYECTO OTHERS XTONE</fullName>
            </value>
            <value>
                <fullName>100236636 - VANITY COUNTERTOP XTONE</fullName>
                <isActive>false</isActive>
                <label>100236636 - VANITY COUNTERTOP XTONE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>