force-app/main/default/objects/OppCustomProject__c/fields/SemiCustom__c.field-meta.xml
<CustomField>
    <fullName>SemiCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a semi-custom item?</description>
    <label>Semi-custom Item</label>
    <type>Checkbox</type>
</CustomField>