force-app/main/default/objects/OppCustomProject__c/fields/ServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequired__c</fullName>
    <label>Service Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fabrication and Installation</fullName>
            </value>
            <value>
                <fullName>Material and Fabrication Only</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>