force-app/main/default/objects/OppCustomProject__c/fields/ShopDrawings__c.field-meta.xml
<CustomField>
    <fullName>ShopDrawings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shop Drawings Uploaded</label>
    <type>Checkbox</type>
</CustomField>