force-app/main/default/objects/OppCustomProject__c/fields/SinkDescription__c.field-meta.xml
<CustomField>
    <fullName>SinkDescription__c</fullName>
    <label>Sink Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undermount</fullName>
            </value>
            <value>
                <fullName>Overmount</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
            <value>
                <fullName>Apron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>