force-app/main/default/objects/OppCustomProject__c/fields/SinkModelNo__c.field-meta.xml
<CustomField>
    <fullName>SinkModelNo__c</fullName>
    <label>Sink Model No.</label>
    <length>60</length>
    <type>Text</type>
</CustomField>