force-app/main/default/objects/OppCustomProject__c/fields/SinkOverflow__c.field-meta.xml
<CustomField>
    <fullName>SinkOverflow__c</fullName>
    <label>Sink Overflow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>