force-app/main/default/objects/OppCustomProject__c/fields/SinkType__c.field-meta.xml
<CustomField>
    <fullName>SinkType__c</fullName>
    <label>Sink Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Sink</fullName>
            </value>
            <value>
                <fullName>KRION Pre-fabricated</fullName>
            </value>
            <value>
                <fullName>KRION Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Custom Sink</fullName>
            </value>
            <value>
                <fullName>By others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>