force-app/main/default/objects/OppCustomProject__c/fields/Slabs__c.field-meta.xml
<CustomField>
    <fullName>Slabs__c</fullName>
    <label>Number of Slabs Needed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>