force-app/main/default/objects/OppCustomProject__c/fields/SpecialOrder__c.field-meta.xml
<CustomField>
    <fullName>SpecialOrder__c</fullName>
    <label>Special Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValueSet</valueSetName>
    </valueSet>
</CustomField>