force-app/main/default/objects/OppCustomProject__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Project Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUALIFICATION</fullName>
                <default>true</default>
                <label>QUALIFICATION</label>
            </value>
            <value>
                <fullName>PR-RECEIVED</fullName>
            </value>
            <value>
                <fullName>PROPOSAL</fullName>
            </value>
            <value>
                <fullName>DEPOSIT</fullName>
            </value>
            <value>
                <fullName>TEMPLATE-APP</fullName>
            </value>
            <value>
                <fullName>DRAWING-SIGNED</fullName>
            </value>
            <value>
                <fullName>CHANGE-ORDER</fullName>
            </value>
            <value>
                <fullName>PAYMENT-RECEIVED</fullName>
            </value>
            <value>
                <fullName>IN-PRODUCTION</fullName>
            </value>
            <value>
                <fullName>INSTALLATION</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>LOST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>