force-app/main/default/objects/OppCustomProject__c/fields/VanityBy__c.field-meta.xml
<CustomField>
    <fullName>VanityBy__c</fullName>
    <label>Vanity By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>wall mounted</fullName>
                <label>No, wall mounted (add brackets)</label>
            </value>
            <value>
                <fullName>No, wall mounted (add backets)</fullName>
                <isActive>false</isActive>
                <label>No, wall mounted (add backets)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>