force-app/main/default/objects/OppCustomProject__c/fields/VanityType__c.field-meta.xml
<CustomField>
    <fullName>VanityType__c</fullName>
    <label>Vanity Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KOLE</fullName>
            </value>
            <value>
                <fullName>RAS</fullName>
            </value>
            <value>
                <fullName>TRAVAT</fullName>
            </value>
            <value>
                <fullName>TETRIS</fullName>
            </value>
            <value>
                <fullName>NEXT</fullName>
            </value>
            <value>
                <fullName>CITY</fullName>
            </value>
            <value>
                <fullName>FOLK</fullName>
            </value>
            <value>
                <fullName>PENROSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>