force-app/main/default/objects/OppCustomProject__c/fields/WaterfallLegs__c.field-meta.xml
<CustomField>
    <fullName>WaterfallLegs__c</fullName>
    <label>Waterfall Legs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoValueSet</valueSetName>
    </valueSet>
</CustomField>