force-app/main/default/objects/OppCustomProject__c/recordTypes/DefaultCustomProject.recordType-meta.xml
<RecordType>
    <fullName>DefaultCustomProject</fullName>
    <active>true</active>
    <label>Default Custom Project</label>
</RecordType>