force-app/main/default/objects/OppCustomProject__c/validationRules/Quoted_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Quoted_Amount</fullName>
    <active>true</active>
    <description>Checks amount qupted if project in PROPOSAL stage</description>
    <errorConditionFormula>ISPICKVAL(Stage__c, &apos;PROPOSAL&apos;) &amp;&amp;  
(ISNULL(Amount__c)|| Amount__c &lt;=99 || Amount__c == 999)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please enter quoted price ($) in Amount field first</errorMessage>
</ValidationRule>